# serial-cpp

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/serial-reader/: CMakeLists.txt  main.cpp
apps/serial-writer/: CMakeLists.txt  main.cpp
apps/serial_reader/: CMakeLists.txt  main.cpp
apps/serial_writer/: CMakeLists.txt  main.cpp
include/serial_cpp/: serial.h
sources/: CMakeLists.txt
sources/serial_cpp/: CMakeLists.txt  serial.cpp
sources/serialcpp/: CMakeLists.txt  serial.cpp
